# ai-translate

./: .gitignore  README.md  pyproject.toml
translate/: translate.py
