[tool.poetry]
name = "translate"
version = "0.1.0"
description = ""
authors = ["Peter Van Katwyk <pvankatwyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.51.1"
pyttsx3 = "^2.98"
pyaudio = "^0.2.14"
simpleaudio = "^1.0.4"
ffprobe = "^0.5"
ffmpeg = "^1.4"
pydub = "^0.25.1"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
